<resources>
    <string name="appName">Byte-School</string>
    <string name="mail">Email</string>
    <string name="pass">Parolă</string>
    <string name="repeat_password">Repetă parola</string>
    <string name="register">înregistrează-te</string>
    <string name="login">Conectare</string>
    <string name="todo">TODO</string>
    <string name="logout">Deconectare</string>
    <string name="singed_up_successfully">înregistrat cu succes</string>
    <string name="logged_in_successfully">autentificat cu succes</string>
    <string name="forgotten_password"><u>Ai uitat parola?</u></string>
    <string name="error">Eroare</string>
    <string name="already_registered">Deja înregistrat?</string>
    <string name="agree">Sunt de acord</string>
    <string name="conditions_title">Termeni și condiții</string>
    <string name="not_same_password">Parolele diferă</string>
    <string name="try_again">încearcă din nou</string>
    <string name="empty_field">Acest câmp este gol</string>
    <string name="conditions">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Quisque sagittis faucibus consequat. Vestibulum
        ante ipsum primis in faucibusorci luctus et ultrices
        posuere cubilia curae;In ultricies metus non commodo varius.
        Curabitur massa orci, iaculis nec nibh at, consequat feugiat justo.
        Aliquam erat volutpat. Phasellus efficitur, magna posuere pulvinar
        egestas, enim lorem pharetra mauris, id egestas ante odio quis quam.
        Morbi fermentum suscipit odio vitae placerat. Sed mollis enim magna,
        in mattis ligula consequat quis. Pellentesque dapibus urna leo,
        a congue elit luctus sed. Nullam quis dui ornare, sodales turpis quis,
        sollicitudin nisl. Pellentesque habitant morbi tristique senectus et
        netus et malesuada fames ac turpis egestas.
        Nullam venenatis fermentum molestie.
        Mauris eget orci et dolor facilisis efficitur.
        Nunc nec facilisis turpis, imperdiet suscipit risus.</string>
    <string name="thank">Mulțumim</string>
    <string name="send_reset_email">trimite email de resetare</string>
    <string name="mail_to_reset_sent">Am trimis un email pentru resetarea parolei</string>
    <string name="make_sure_you_have_an_account">Asigură-te că ai introdus adresa corectă și că ești cu siguranță conectat la noi cu aceasta</string>
    <string name="image">imagine</string>
    <string name="save">salvare</string>
    <string name="class_code">Codul de clasă</string>
    <string name="classroom_do_not_exists">Această clasă nu există :(</string>
    <string name="classroom_chat">Discută cu clasa</string>
    <string name="check">Verifică</string>
</resources>

